--- a/src/app/sistema/estoque/produtos/adicionar-produtos/adicionar-produtos.component.html
+++ b/src/app/sistema/estoque/produtos/adicionar-produtos/adicionar-produtos.component.html
@@ -208,7 +208,7 @@
             <div class="col-12 px-2 m-0 p-0">
               <h5 class="fw-bold text-custom-dark m-0 p-0">Tributação</h5>
             </div>
-            
+
             <!-- Origem do produto conforme ICMS -->
             <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
               <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm">
@@ -219,61 +219,61 @@
               </select>
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Origem do produto conforme ICMS</label>
             </div>
-            
+
             <!-- NCM -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="NCM">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">NCM</label>
             </div>
-            
+
             <!-- CEST -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="CEST">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">CEST</label>
             </div>
-            
+
             <!-- Tributos -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="%">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tributos</label>
             </div>
-            
+
             <!-- Valor base ICMS ST para retenção -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Valor base ICMS ST para retenção">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor base ICMS ST para retenção</label>
             </div>
-            
+
             <!-- Valor ICMS ST para retenção -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Valor ICMS ST para retenção">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor ICMS ST para retenção</label>
             </div>
-            
+
             <!-- Valor ICMS próprio do substituto -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Valor ICMS próprio do substituto">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor ICMS próprio do substituto</label>
             </div>
-            
+
             <!-- Código de exceção da TIPI -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Código de exceção da TIPI">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Código de exceção da TIPI</label>
             </div>
-            
+
             <!-- Valor PIS fixo -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Valor PIS fixo">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor PIS fixo</label>
             </div>
-            
+
             <!-- Valor COFINS fixo -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Valor COFINS fixo">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor COFINS fixo</label>
             </div>
-            
+
             <!-- Informações adicionais -->
             <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
               <textarea class="form-control form-control-lg px-4 py-3 rounded-15 shadow-sm" placeholder="Informações adicionais" style="height: 150px"></textarea>
@@ -289,14 +289,14 @@
           <!-- Cancelar -->
           <div class="col-3 px-2 p-0 m-0 d-grid">
             <button data-bs-dismiss="modal" type="reset" class="h-limited-sm btn rounded-15 py-1 px-4 bg-light shadow-sm text-start">
-              <h5 class="fw-normal my-auto text-truncate text-custom-dark">Cancelar</h5>
+              <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Cancelar</h5>
             </button>
           </div>
 
           <!-- Salvar -->
           <div class="col-3 px-2 p-0 m-0 d-grid">
             <button type="submit" class="h-limited-sm btn rounded-15 py-1 px-4 bg-custom-success shadow-sm text-start">
-              <h5 class="fw-normal my-auto text-truncate text-custom-dark">Salvar</h5>
+              <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Salvar</h5>
             </button>
           </div>
 
