--- a/src/app/sistema/estoque/suprimentos/adicionar-suprimentos/adicionar-suprimentos.component.html
+++ b/src/app/sistema/estoque/suprimentos/adicionar-suprimentos/adicionar-suprimentos.component.html
@@ -125,14 +125,14 @@
           <!-- Cancelar -->
           <div class="col-3 px-2 p-0 m-0 d-grid">
             <button data-bs-dismiss="modal" type="reset" class="h-limited-sm btn rounded-15 py-1 px-4 bg-light shadow-sm text-start">
-              <h5 class="fw-normal my-auto text-truncate text-custom-dark">Cancelar</h5>
+              <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Cancelar</h5>
             </button>
           </div>
 
           <!-- Salvar -->
           <div class="col-3 px-2 p-0 m-0 d-grid">
             <button type="submit" class="h-limited-sm btn rounded-15 py-1 px-4 bg-custom-success shadow-sm text-start">
-              <h5 class="fw-normal my-auto text-truncate text-custom-dark">Salvar</h5>
+              <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Salvar</h5>
             </button>
           </div>
 
