--- a/src/app/sistema/rh/controle-vt/controle-vt.component.html
+++ b/src/app/sistema/rh/controle-vt/controle-vt.component.html
@@ -18,7 +18,7 @@
             <h1 class="text-custom-dark text-truncate">Controle de Vale Transporte</h1>
         </div>
 
-        <div class="tabela col-12 mt-4 row">
+        <div class="tabela col-12 mt-4">
 
                 <div class="col-12 row border border-1 border-custom-dark m-0 p-0">
                     <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark">
@@ -53,7 +53,7 @@
                                 </div>
                             </div>
                             <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark">
-                                <div class="p-0 m-0 form-floating">  
+                                <div class="p-0 m-0 form-floating">
                                     <input formControlName="vt"
                                         class="form-control form-control-lg shadow-sm" type="text"
                                         placeholder="Dias trabalhados" readonly>
@@ -76,7 +76,7 @@
                                 </div>
                             </div>
                             <div class="col-3 row h3 m-0 p-0 border border-1 border-custom-dark">
-                                <div class="p-0 m-0 form-floating">  
+                                <div class="p-0 m-0 form-floating">
                                     <input formControlName="total"
                                         class="form-control form-control-lg shadow-sm" type="number"
                                         placeholder="Dias trabalhados" readonly>
@@ -85,15 +85,15 @@
                         </div>
                     </div>
                     <div class="row m-0 mt-4 justify-content-end">
-    
+
                         <!-- Botão Salvar -->
                         <div class="col-4 d-grid px-2 p-0 m-0">
                           <button type="submit"
                             class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm">
-                            <h5 class="fw-normal my-auto text-truncate text-custom-dark">Salvar</h5>
+                            <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Salvar</h5>
                           </button>
                         </div>
-              
+
                     </div>
                 </form>
                 <!-- <table class="col-11 m-auto">
@@ -117,7 +117,7 @@
                                 </div>
                             </td>
                             <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">
-                                <div class="p-0 m-0 form-floating">  
+                                <div class="p-0 m-0 form-floating">
                                     <input formControlName="vt"
                                         class="form-control form-control-lg rounded-15 shadow-sm" type="text"
                                         placeholder="Dias trabalhados" readonly>
@@ -132,14 +132,14 @@
                                 </div>
                             </td>
                             <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">
-                                <div class="p-0 m-0 form-floating">  
+                                <div class="p-0 m-0 form-floating">
                                     <input formControlName="total"
                                         class="form-control form-control-lg rounded-15 shadow-sm" type="text"
                                         placeholder="Dias trabalhados" readonly>
                                 </div>
                             </td>
                         </tr>
-                    </tbody> 
+                    </tbody>
 
 
                 </table> -->
@@ -165,7 +165,7 @@
                         <i class="bi bi-file-excel icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark text-white" cursor="pointer"></i>
                     </button>
                 </div>
-                
+
             </div>
     </div>
 </div>
