--- a/src/app/sistema/estoque/fornecedores/edit-fornecedor/edit-fornecedor.component.html
+++ b/src/app/sistema/estoque/fornecedores/edit-fornecedor/edit-fornecedor.component.html
@@ -157,7 +157,7 @@
 
             <!-- Cidade -->
             <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" 
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
                 placeholder="Cidade" formControlName="city">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Cidade</label>
             </div>
@@ -216,7 +216,7 @@
                     <i class="bi bi-x-square-fill icon-view my-auto fs-4 p-2 m-0 fw-bold text-custom-dark"></i>
                   </a>
                 </div>
-                
+
                 <!-- WhatsApp -->
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                   <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
@@ -338,14 +338,14 @@
           <div class="col-3 px-2 p-0 m-0 d-grid">
             <button data-bs-dismiss="modal" type="reset"
               class="h-limited-sm btn rounded-15 py-1 px-4 bg-light shadow-sm text-start">
-              <h5 class="fw-normal my-auto text-truncate text-custom-dark">Cancelar</h5>
+              <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Cancelar</h5>
             </button>
           </div>
 
           <!-- Salvar -->
           <div class="col-3 px-2 p-0 m-0 d-grid">
             <button type="submit" class="h-limited-sm btn rounded-15 py-1 px-4 bg-custom-success shadow-sm text-start" (click)="save()">
-              <h5 class="fw-normal my-auto text-truncate text-custom-dark">Salvar</h5>
+              <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Salvar</h5>
             </button>
           </div>
 
