--- a/src/app/sistema/rh/ausencia/ausencia.component.html
+++ b/src/app/sistema/rh/ausencia/ausencia.component.html
@@ -46,7 +46,7 @@
                     <input formControlName="cargo" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Colaborador" readonly>
                     <label class="ms-2 small text-truncate text-custom-dark">Cargo</label>
                   </div>
-                </div> 
+                </div>
               </div>
               <!-- Tabela -->
               <div class="row m-0 mt-3 text-custom-dark justify-content-center" >
@@ -89,20 +89,20 @@
                     <input formControlName="ate" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="date" placeholder="Colaborador">
                     <label class="ms-2 small text-truncate text-custom-dark">Até:</label>
                   </div>
-                </div>  
+                </div>
               </div>
             </div>
           </form>
-          <div class="tabela col-12 mt-4">
+          <div class="tabela row mt-4 text-center">
             <table class="col-12">
                 <thead class="col-12">
                     <tr>
-                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Colaborador</td>
-                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Cargo</td>
-                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Data</td>
-                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Tipo</td>
-                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">De</td>
-                      <td class="h3 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Até</td>
+                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Colaborador</td>
+                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Cargo</td>
+                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Data</td>
+                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Tipo</td>
+                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">De</td>
+                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Até</td>
                     </tr>
                 </thead>
                 <tbody>
