--- a/src/app/sistema/rh/cadastrar-colaborador/add-filial/add-filial.component.html
+++ b/src/app/sistema/rh/cadastrar-colaborador/add-filial/add-filial.component.html
@@ -17,7 +17,7 @@
                 </div>
               <button type="submit"
                     class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm">
-                    <h5 class="fw-normal my-auto text-truncate text-custom-dark">Salvar</h5>
+                    <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Salvar</h5>
               </button>
           </div>
         </form>
