--- a/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
+++ b/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
@@ -119,20 +119,20 @@
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">CPF/CNPJ</label>
                 </div>
 
-                
+
                 <!-- CNH -->
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                   <input maxlength="11" formControlName="cnh" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"  type="text" placeholder="CNH">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">CNH</label>
                 </div>
-                
+
                 <!-- PIS -->
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                   <input formControlName="pis" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"
                   type="text" placeholder="PIS">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">PIS</label>
                 </div>
-                
+
                 <!-- Gênero -->
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                     <select formControlName="gender"
@@ -197,7 +197,7 @@
 
                 <!-- Nacionalidade -->
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-                    <input formControlName="nacionality" 
+                    <input formControlName="nacionality"
                     class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
                     placeholder="Nacionalidade">
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nacionalidade</label>
@@ -391,7 +391,7 @@
                 placeholder="Data da demissão">
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data da demissão</label>
             </div>
-            
+
             <!-- Vencimento de Férias -->
             <div class="col-4 px-2 pt-4 p-2 mb-2 form-floating">
               <input formControlName="vacationDueDate"
@@ -424,7 +424,7 @@
                 type="text" placeholder="Banco">
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Banco</label>
             </div>
-        
+
             <!-- Tipo de conta -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                 <select formControlName="bankAccountType"
@@ -437,7 +437,7 @@
                 </select>
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tipo de conta</label>
             </div>
-        
+
             <!-- Agência -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                 <input formControlName="bankAgency"
@@ -445,7 +445,7 @@
                 placeholder="Agência">
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Agência</label>
             </div>
-        
+
             <!-- Conta -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                 <input formControlName="bankAccountNumber"
@@ -453,7 +453,7 @@
                 placeholder="Conta">
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Conta</label>
             </div>
-        
+
             <!-- Salário -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                 <input formControlName="paycheck"
@@ -461,7 +461,7 @@
                 placeholder="Salário" (change)="duplaFuncao(rhForm.value)">
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Salário</label>
             </div>
-        
+
             <!-- Dupla Função -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                 <input formControlName="duplaFuncao"
@@ -519,7 +519,7 @@
               placeholder="Pix">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Pix</label>
             </div>
-          </div>    
+          </div>
         </div>
 
         <div *ngIf="estoqueSection == 'exames'">
@@ -529,14 +529,14 @@
           </div>
           <div class="col-12" *ngFor="let exame of exame['controls']; let i = index" formArrayName="exame">
             <div class="col-12 d-flex justify-content-center" [formGroupName]="i">
-          
+
               <div class="col px-2 pt-4 p-2 mb-2 form-floating">
                 <input formControlName="data"
                   class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date"
                   placeholder="Conta">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Último exame</label>
               </div>
-  
+
               <div class="col px-2 pt-4 p-0 m-0 form-floating">
                 <select
                 class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
@@ -555,7 +555,7 @@
                   placeholder="Conta">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Vencimento</label>
               </div>
-              
+
               <div class="col-1 row">
                 <i class="display-6 d-flex align-items-center w-100 h-100 bi-trash-fill icon-delete p-3" cursor="pointer" (click)="deleteExame(i)"></i>
               </div>
@@ -563,7 +563,7 @@
             </div>
           </div>
 
-          
+
         </div>
 
         <div *ngIf="estoqueSection == 'uniforme'">
@@ -583,7 +583,7 @@
                       </select>
                       <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tamanho da camiseta</label>
                     </div>
-        
+
                     <!-- Ultima entrega -->
                    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                     <input formControlName="lastDeliveryTshirt"
@@ -591,11 +591,11 @@
                       placeholder="Ultima entrega">
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ultima entrega (camiseta)</label>
                    </div>
-        
+
                   </div>
-        
+
                   <div class="col-12 d-flex justify-content-center">
-        
+
                     <!-- tamanho da calça -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                       <select
@@ -609,7 +609,7 @@
                       </select>
                       <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tamanho da calça</label>
                     </div>
-        
+
                     <!-- Ultima entrega -->
                    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                     <input formControlName="lastDeliveryPants"
@@ -617,11 +617,11 @@
                       placeholder="Ultima entrega">
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ultima entrega (calça)</label>
                    </div>
-        
+
                   </div>
-        
+
                   <div class="col-12 d-flex justify-content-center">
-        
+
                     <!-- Tamanho do sapato -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                       <select
@@ -641,7 +641,7 @@
                       </select>
                       <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tamanho do calçado</label>
                     </div>
-        
+
                     <!-- Ultima entrega -->
                    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                     <input formControlName="lastDeliveryShoes"
@@ -649,11 +649,11 @@
                       placeholder="Ultima entrega">
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ultima entrega (sapato)</label>
                    </div>
-        
+
                   </div>
-        
+
                   <div class="col-12 d-flex justify-content-center">
-        
+
                     <!-- Tamanho do cinto -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                       <select
@@ -666,7 +666,7 @@
                       </select>
                       <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tamanho do cinta</label>
                     </div>
-        
+
                     <!-- Ultima entrega -->
                    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                     <input formControlName="lastDeliveryBelt"
@@ -674,11 +674,11 @@
                       placeholder="Ultima entrega">
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ultima entrega (cinta)</label>
                    </div>
-        
+
                   </div>
-        
+
                   <div class="col-12 d-flex justify-content-center">
-        
+
                     <!-- Tamanho do luva -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                       <select
@@ -690,7 +690,7 @@
                       </select>
                       <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tamanho das luvas</label>
                     </div>
-        
+
                     <!-- Ultima entrega -->
                    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                     <input formControlName="lastDeliveryGloves"
@@ -698,11 +698,11 @@
                       placeholder="Ultima entrega">
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ultima entrega (luva)</label>
                    </div>
-        
+
                   </div>
-                  
+
                   <div class="col-12 d-flex justify-content-center">
-        
+
                     <!-- Tamanho do jaqueta -->
                     <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                       <select
@@ -716,7 +716,7 @@
                       </select>
                       <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tamanho da jaqueta</label>
                     </div>
-        
+
                     <!-- Ultima entrega -->
                    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                     <input formControlName="lastDeliveryJacket"
@@ -724,11 +724,11 @@
                       placeholder="Ultima entrega">
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ultima entrega (jaqueta)</label>
                    </div>
-        
+
                 </div>
 
                 <div class="col-12 d-flex justify-content-center">
-        
+
                   <!-- Tamanho do jaqueta -->
                   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                     <select
@@ -739,7 +739,7 @@
                     </select>
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Abafador de ruído?</label>
                   </div>
-      
+
                   <!-- Ultima entrega -->
                  <div *ngIf="abafador.value=='sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                   <input formControlName="lastDeliveryAbafador"
@@ -747,7 +747,7 @@
                     placeholder="Ultima entrega">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ultima entrega (Abafador de ruído)</label>
                  </div>
-      
+
               </div>
             </div>
         </div>
@@ -773,9 +773,9 @@
                       <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
                     </button>
                   </div>
-        
+
                 </div>
-        
+
               </div>
           </div>
       </div>
@@ -785,13 +785,13 @@
           <div class="col-4 d-grid px-2 p-0 m-0">
             <button type="submit"
               class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm">
-              <h5 class="fw-normal my-auto text-truncate text-custom-dark">Salvar</h5>
+              <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Salvar</h5>
             </button>
           </div>
 
         </div>
       </form>
-          
+
     </div>
     <!-- /Página -->
   </div>
