--- a/src/app/sistema/vendas/editar-clientes/avaliacao-credito/avaliacao-credito.component.html
+++ b/src/app/sistema/vendas/editar-clientes/avaliacao-credito/avaliacao-credito.component.html
@@ -82,7 +82,7 @@
   <!-- Botão Salvar -->
   <div class="col-4 d-grid px-2 p-0 m-0">
     <button type="submit" class="btn rounded-15 py-3 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm">
-      <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Salvar</h5>
+      <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Salvar</h5>
     </button>
   </div>
 
