--- a/src/app/sistema/vendas/editar-clientes/cadastrar-cliente/cadastrar-cliente.component.html
+++ b/src/app/sistema/vendas/editar-clientes/cadastrar-cliente/cadastrar-cliente.component.html
@@ -33,7 +33,7 @@
     </div>
 
   </div>
-  
+
   <div *ngIf="tipoPessoa === 'fisica'">
 
     <!-- Dados do cliente -->
@@ -98,7 +98,7 @@
 
     </div>
   </div>
-  
+
   <div *ngIf="tipoPessoa === 'juridica'">
     {{ toggleTipoPessoa('juridica') }}
     <!-- Dados do cliente -->
@@ -250,7 +250,7 @@
     <div class="col-5 px-2 p-0 m-0">
       <a class="rounded-15 py-1 px-4 bg-white h-limited d-flex justify-content-between shadow-sm"
         (click)="adicionarEndereco()">
-        <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Cadastrar outro endereço</h5>
+        <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Cadastrar outro endereço</h5>
       </a>
     </div>
 
@@ -258,7 +258,7 @@
     <div class="col-4 d-grid px-2 p-0 m-0">
       <button type="submit"
         class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm">
-        <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Salvar</h5>
+        <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Salvar</h5>
       </button>
     </div>
 
