--- a/src/app/sistema/rh/relatorio-ausencia/relatorio-ausencia.component.html
+++ b/src/app/sistema/rh/relatorio-ausencia/relatorio-ausencia.component.html
@@ -52,16 +52,16 @@
                     </div>
                 </form>
             </div>
-            <div class="tabela col-12 mt-4">
+            <div class="tabela col-12 mt-4 text-center">
                 <table class="col-12">
                     <thead class="col-12">
                         <tr>
-                            <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Colaborador</td>
-                            <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Cargo</td>
-                            <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Data</td>
-                            <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Tipo</td>
-                            <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">De</td>
-                            <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Até</td>
+                            <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Colaborador</td>
+                            <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Cargo</td>
+                            <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Data</td>
+                            <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Tipo</td>
+                            <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">De</td>
+                            <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Até</td>
                         </tr>
                     </thead>
                     <tbody *ngFor="let oneColab of ausencia">
