--- a/src/app/sistema/rh/cadastrar-colaborador/cadastrar-colaborador.component.html
+++ b/src/app/sistema/rh/cadastrar-colaborador/cadastrar-colaborador.component.html
@@ -828,7 +828,7 @@
           <!-- Botão Salvar -->
           <div class="col-4 d-grid px-2 p-0 m-0">
             <button type="submit"
-              class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm">
+              class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-center shadow-sm">
               <h5 class="fw-normal my-auto text-truncate text-custom-dark text-center">Salvar</h5>
             </button>
           </div>
