--- a/src/app/sistema/rh/relatorio-ausencia/relatorio-ausencia.component.scss
+++ b/src/app/sistema/rh/relatorio-ausencia/relatorio-ausencia.component.scss
@@ -21,3 +21,12 @@
 .excel-button:hover{
     background: #78fc87;
 }
+
+.header_table {
+  background-color: hsl(357, 85%, 51%);;
+  color: #fff;
+}
+
+.body_table {
+  background-color: #fdfbfb;
+}
