--- a/src/app/sistema/rh/apont-faltas/apont-faltas.component.html
+++ b/src/app/sistema/rh/apont-faltas/apont-faltas.component.html
@@ -104,33 +104,34 @@
 
             </div>
           </form>
-          <div class="tabela row mt-4 text-center">
+          <div class="row mt-5 text-center">
             <table class="col-12">
-                <thead class="col-12">
+                <thead class="header_table col-12">
                     <tr>
-                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Colaborador</td>
-                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Cargo</td>
-                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Data</td>
-                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Tipo</td>
-                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Período</td>
-                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Tempo</td>
-                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Dias (atestado)</td>
-                      <td class="h4 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Atestado</td>
+                      <td class="lead rounded-start text-center fw-bold">Colaborador</td>
+                      <td class="lead text-center fw-bold">Cargo</td>
+                      <td class="lead text-center fw-bold">Data</td>
+                      <td class="lead text-center fw-bold">Tipo</td>
+                      <td class="lead text-center fw-bold">Período</td>
+                      <td class="lead text-center fw-bold">Tempo</td>
+                      <td class="lead text-center fw-bold">Dias (atestado)</td>
+                      <td class="lead text-center fw-bold">Atestado</td>
+                      <td class="lead pe-2 rounded-end text-center fw-bold">Ações</td>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr *ngFor="let oneColab of colab">
-                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.colaborador}}</td>
-                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.cargo}}</td>
-                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.data.substring(10, 0)}}</td>
-                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.tipo}}</td>
-                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.periodo}}</td>
-                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">{{oneColab.tempo}}</td>
-                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">
+                <tbody class="body_table">
+                    <tr class="mt-2" *ngFor="let oneColab of colab">
+                      <td class="lead text-custom-dark fw-normal">{{oneColab.colaborador}}</td>
+                      <td class="lead text-custom-dark fw-normal">{{oneColab.cargo}}</td>
+                      <td class="lead text-custom-dark fw-normal">{{oneColab.data.substring(10, 0)}}</td>
+                      <td class="lead text-custom-dark fw-normal">{{oneColab.tipo}}</td>
+                      <td class="lead text-custom-dark fw-normal">{{oneColab.periodo}}</td>
+                      <td class="lead text-custom-dark fw-normal">{{oneColab.tempo}}</td>
+                      <td class="lead text-custom-dark fw-normal">
                         <p class="w-100 h-100 text-center m-0" *ngIf="oneColab.diasAtestado==''">-</p>
                         <p class="w-100 h-100 m-0" *ngIf="oneColab.diasAtestado!=''">{{oneColab.diasAtestado}}</p>
                       </td>
-                      <td class="lead text-custom-dark border border-custom-dark border-1 fw-normal">
+                      <td class="lead text-custom-dark fw-normal">
                         <p class="w-100 h-100 text-center m-0" *ngIf="oneColab.atestado==''">-</p>
                         <p class="w-100 h-100 m-0" *ngIf="oneColab.atestado!=''">{{oneColab.atestado}}</p>
                       </td>
