--- a/src/app/sistema/rh/ausencia/ausencia.component.scss
+++ b/src/app/sistema/rh/ausencia/ausencia.component.scss
@@ -4,3 +4,12 @@
 .submit-buton:hover{
     background: transparent;
 }
+
+.header_table {
+  background-color: hsl(357, 85%, 51%);;
+  color: #fff;
+}
+
+.body_table {
+  background-color: #fdfbfb;
+}
